# mlir-tutorial

./: .gitignore  CMakeLists.txt  temp.txt
.cache/clangd/index/: AST.cpp.1DA9142194DBC8DF.idx  AST.h.13923CFA8B65AD7F.idx  Dialect.cpp.75F976D4F3EDF5CE.idx  Dialect.cpp.inc.685A517513D3D9D5.idx  Dialect.h.1C9274B97E42EED0.idx  Dialect.h.inc.7CA92F3240118CA3.idx  Lexer.h.3A6775D0346E5B22.idx  MLIRGen.cpp.AA8F8A0F89FBFC23.idx  MLIRGen.h.3559DC12AEFE4DD6.idx  Ops.cpp.inc.A1791B2780655139.idx  Ops.h.inc.474226EF3EF051A8.idx  Parser.h.2ADEA9EEDADC0CD9.idx  ToyCombine.cpp.91CF2D29D09B1DF1.idx  ToyCombine.inc.009A362ABDADB2D4.idx  main.cpp.730AC221806F7B54.idx
inc/: AST.h  Lexer.h  MLIRGen.h  Parser.h  Passes.h
inc/toy/: CMakeLists.txt  Dialect.h  Ops.td  ShapeInferenceInterfaces.td  gen.sh
note/: Ch4.md  Ch5.md  Ch6.md  Ch7.md
note/mlir_lib/: 1_basic_struct.md  2_cast.md
src/: AST.cpp  LowerToAffineLoops.cpp  MLIRGen.cpp  main.cpp
src/toy/: Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  ShapeInferencePasser.cpp  ToyCombine.cpp  gen.sh
test/: Ch3.mlir  Ch4.mlir  Ch4_nxt.mlir  Ch5.mlir  Ch6.mlir  Ch7.ast  Ch7.ll  Ch7.mlir  Ch7.toy  test.toy  test_temp.toy
